--- a/index.html
+++ b/index.html
@@ -45,10 +45,21 @@
         const Pages = {}
 
         Pages.Home = function () {
+            const [clicked, setClicked] = React.useState(false);
+
+            const handleClick = () => {
+                setClicked(true);
+            };
+
+            if (clicked) {
+                return <Pages.About />;
+            }
+
             return (
                 <div>
                     <Partials.Header />
                     <h1>Home</h1>
+                    <button onClick={handleClick}>Go to About</button>
                 </div>
             );
         }
