--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
             )
         }
 
+        Partials.ButtonGroup = function (props) {
+            // contoh:
+            // <button className="btn btn-primary" type="button">Button</button>
+            return (
+                <div className="d-flex justify-content-around container">
+                    <props.Button1 />
+                    {props.Button2 ? (
+                        <React.Fragment>
+                            <props.Button1 />
+                            <props.Button2 />
+                        </React.Fragment>
+                    ) : (
+                        <props.Button1 />
+                    )}
+                </div>
+            )
+        }
+
         Partials.Footer = function () {
             return (
                 <nav className="navbar bg-dark border-bottom border-body fixed-bottom text-center">
@@ -172,7 +190,7 @@
             )
         }
 
-        Pages.ApakahKamuButaWarna = function() {
+        Pages.ApakahKamuButaWarna = function () {
             return (
                 <div className="container card">
                     <Partials.Header text="YUK CEK SEKOLAH APAKAH KAMU BUTA WARNA?" />
