merubah text button Home

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
         Pages.Home = function () {
             function Button1() {
-                return <button className="btn btn-primary" type="button">Cenetan</button>
+                return <button className="btn btn-primary" type="button">Cek Kedinasan Sekolahmu</button>
             }
 
             function Button2() {
-                return <button className="btn btn-primary" type="button">Tombol</button>
+                return <button className="btn btn-primary" type="button">Tes Buta Warna</button>
             }
 
             return (
