--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
         Pages.Home = function (props) {
             function Button1() {
-                return <button onClick={() => props.showPage("coba")} className="btn btn-primary" type="button">Cek Kedinasan Sekolahmu</button>
+                return <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary" type="button">Cek Kedinasan Sekolahmu</button>
             }
 
             function Button2() {
-                return <button onClick={() => props.showPage("tes-tebak-karakter-buta-warna")} className="btn btn-primary" type="button">Tes Buta Warna</button>
+                return <button onClick={() => props.showPage("tebak-karakter-buta-warna")} className="btn btn-primary" type="button">Tes Buta Warna</button>
             }
 
             return (
@@ -201,7 +201,37 @@
             )
         }
 
-        Pages.ApakahKamuButaWarna = function () {
+        Pages.CekKedinasanSekolah = function (props) {
+            function Button1() {
+                return <button onClick={() => props.showPage("home")} className="btn btn-primary">Kembali</button>
+            }
+
+            return (
+                <div className="container card">
+                    <Partials.Header text="YUK CEK SEKOLAH KEDINASNAN MANA YANG TEPAT UNTUK KAMU" />
+                    <p>Tentukan Sekolah Kedinasan mu secara tepat dengan software rekomendasi ini !!!</p>
+
+                    <Partials.ButtonGroup Button1={() => <Button1 />}/>
+                </div>
+            )
+        }
+
+        Pages.ApakahKamuButaWarna = function (props) {
+            function Button1() {
+                return <button onClick={() => props.showPage("apakah-kamu-buta-warna")} className="btn btn-primary">Kembali</button>
+            }
+
+            return (
+                <div className="container card">
+                    <Partials.Header text="YUK CEK SEKOLAH APAKAH KAMU BUTA WARNA?" />
+                    <p>Tentukan Sekolah Kedinasan mu secara tepat dengan software rekomendasi ini !!!</p>
+
+                    <Partials.ButtonGroup Button1={() => <Button1 />}/>
+                </div>
+            )
+        }
+
+        Pages.BerapaMinus = function (props) {
             return (
                 <div className="container card">
                     <Partials.Header text="YUK CEK SEKOLAH APAKAH KAMU BUTA WARNA?" />
@@ -230,7 +260,10 @@
                     {/* Konten halaman yang sedang aktif */}
                     <div className="m-3 p-2">
                         {activePage === "home" && <Pages.Home showPage={showPage} />}
+                        {activePage === "cek-kedinasan-sekolah" && <Pages.CekKedinasanSekolah showPage={showPage} />}
                         {activePage === "tebak-karakter-buta-warna" && <Pages.TebakKarakterButaWarna showPage={showPage} />}
+                        {activePage === "apakah-kamu-buta-warna" && <Pages.ApakahKamuButaWarna showPage={showPage} />}
+                        {activePage === "berapa-minus" && <Pages.BerapaMinus showPage={showPage} />}
                         {activePage === "about" && <Pages.About />}
                         {activePage === "coba" && <Pages.Coba />}
                         {/* Anda dapat menambahkan halaman lain di sini */}
