--- a/index.html
+++ b/index.html
@@ -379,6 +379,19 @@
                         <div class="alert alert-info" role="alert">
                             Jawabanmu
                         </div>
+                        <ul class="list-group">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A fourth item</li>
+                            <li class="list-group-item">And a fifth one</li>
+                        </ul>
+                    </div>
+                    <hr />
+                    <div>
+                        <div class="alert alert-info" role="alert">
+                            Sekolah Kedinasan Yang Cocok Untuk Kamu
+                        </div>
                         <ul class="list-group list-group-flush">
                             <ListItem title="IPDN" page="cek-ipdn" />
                         </ul>
